[package]
name = "neli-nl80211-hang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neli = { git = "https://github.com/jbaublitz/neli", branch = "v0.7.0-rc2", features = ["tokio", "async"] }
tokio = { version = "1.27.0", features = ["full"] }